@@ -126,7 +126,7 @@ OP_GuildLeader=0x7e09
 OP_GuildDelete=0x3708
 OP_GuildInviteAccept=0x7053
 OP_GuildDemote=0x2d4e
-OP_GuildPromote=0x0000
+OP_GuildPromote=0x6a98
 OP_GuildPublicNote=0x5053
 OP_GuildManageBanker=0x748f
 OP_GuildBank=0x5134
